# openai-api-haskell

./: README.md  cabal.project  hie.yaml
.github/workflows/: haskell-ci.yml
openai-api/: openai-api.cabal
openai-api-servant/: openai-api-servant.cabal
openai-api-servant/src/OpenAI/: Api.hs  Resources.hs
openai-api/src/OpenAI/: Client.hs
openai-api/test/: Spec.hs
openai-hs/: openai-hs.cabal
openai-hs/src/OpenAI/: Client.hs
openai-hs/test/: ApiSpec.hs
openai-servant/: openai-servant.cabal
openai-servant/src/OpenAI/: Api.hs  Resources.hs
openai-servant/src/OpenAI/Internal/: Aeson.hs
scripts/: make-release.sh
