cabal-version: 1.12
name:           openai-api
version:        0.3.0.1
synopsis:       Unofficial OpenAI client
description:    Unofficial OpenAI client
category:       Web
homepage:       https://github.com/iconnect/openai-api#readme
bug-reports:    https://github.com/iconnect/openai-api/issues
author:         Alexander Thiemann <mail@thiemann.at>
maintainer:     Alexander Thiemann <mail@thiemann.at>
copyright:      2021-2023 Alexander Thiemann <mail@thiemann.at>, 2024 IRIS Connect Engineering Team
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC == 9.4.7 || == 9.6.6
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/iconnect/openai-api

library

  build-tool-depends:  cpphs:cpphs
  exposed-modules:
      OpenAI.Client
      OpenAI.Client.Internal.Helpers
  other-modules:
      Paths_openai_api
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
      DataKinds
      TypeOperators
      TypeFamilies
      GADTs
      FlexibleInstances
      FlexibleContexts
      MultiParamTypeClasses
      StrictData
      ScopedTypeVariables
      DeriveGeneric
      DeriveFunctor
  ghc-options: -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  build-tools:
    cpphs>=1.20
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , casing
    , cpphs
    , deepseq
    , http-client
    , http-types
    , openai-api-servant >=0.2.1
    , servant
    , servant-auth-client
    , servant-client
    , servant-event-stream >= 0.2.1.0
    , servant-multipart-client
    , text
    , wai-extra
  default-language: Haskell2010

test-suite openai-api-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ApiSpec
      HelperSpec
      Paths_openai_api
  hs-source-dirs:
      test
  default-extensions:
      OverloadedStrings
      DataKinds
      TypeOperators
      TypeFamilies
      GADTs
      FlexibleInstances
      FlexibleContexts
      MultiParamTypeClasses
      StrictData
      ScopedTypeVariables
      DeriveGeneric
      DeriveFunctor
  ghc-options: -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , casing
    , containers
    , cpphs
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , openai-api
    , openai-api-servant >=0.2.1
    , servant
    , servant-auth-client
    , servant-client
    , servant-client-core
    , servant-multipart-client
    , text
    , vector
  default-language: Haskell2010
